--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,17 +1,16 @@
 {
-  "short_name": "ShiningCloud",
+  "short_name": "DentalApp",
   "name": "ShiningCloud Dental",
   "icons": [
     {
-      "src": "/logo-gold.svg",
+      "src": "/dental-icon.svg",
       "type": "image/svg+xml",
-      "sizes": "any",
+      "sizes": "512x512",
       "purpose": "any maskable"
     }
   ],
   "start_url": "/",
   "display": "standalone",
-  "scope": "/",
   "theme_color": "#090909",
   "background_color": "#090909"
 }
